[gd_scene load_steps=15 format=3 uid="uid://p1lp3ysawlfi"]

[ext_resource type="Script" path="res://scenes/world/world.gd" id="1_fiack"]
[ext_resource type="TileSet" uid="uid://d0pha3g0yk4g8" path="res://tilesets/main.tres" id="2_gbw1p"]
[ext_resource type="PackedScene" uid="uid://d3nf6i6pjjd5n" path="res://scenes/village.tscn" id="3_qu26j"]
[ext_resource type="Script" path="res://scenes/build_manager.gd" id="4_26fgq"]
[ext_resource type="PackedScene" uid="uid://byb1nycwprtqb" path="res://scenes/player/player.tscn" id="5_j0bro"]
[ext_resource type="PackedScene" uid="uid://d26rkh5gvtfkh" path="res://scenes/ui/hud/hud.tscn" id="6_ai4l1"]
[ext_resource type="PackedScene" uid="uid://52kcruy75hex" path="res://scenes/ui/hud/health/health_bar.tscn" id="7_k23ho"]
[ext_resource type="PackedScene" uid="uid://cyle35g3r7yjd" path="res://scenes/ui/hud/hunger/hunger_bar.tscn" id="8_17m3w"]
[ext_resource type="PackedScene" uid="uid://cs0opcidf6hx4" path="res://scenes/ui/hud/trade/trade_interface.tscn" id="9_ynbql"]
[ext_resource type="PackedScene" uid="uid://3qegagme7w4c" path="res://scenes/ui/hud/building/building.tscn" id="10_d4h0i"]
[ext_resource type="PackedScene" uid="uid://ddbr53ohn683s" path="res://scenes/ui/menu/pause_menu.tscn" id="11_ot3us"]
[ext_resource type="PackedScene" uid="uid://npgme5adxp70" path="res://scenes/npc/blacksmith.tscn" id="12_b30sk"]
[ext_resource type="PackedScene" uid="uid://c81rwddnrgmnu" path="res://scenes/npc/lumberjack.tscn" id="13_yn8u8"]
[ext_resource type="PackedScene" uid="uid://dpk2ucm8f0jch" path="res://scenes/npc/medic.tscn" id="14_ykiai"]

[node name="World" type="Node2D"]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
script = ExtResource("1_fiack")

[node name="WaterLayer" type="TileMapLayer" parent="."]
z_index = -3
tile_set = ExtResource("2_gbw1p")

[node name="SandLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_set = ExtResource("2_gbw1p")

[node name="GroundLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_set = ExtResource("2_gbw1p")

[node name="GrassLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_set = ExtResource("2_gbw1p")

[node name="BuildLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_gbw1p")

[node name="Village" parent="." instance=ExtResource("3_qu26j")]
z_index = -1
position = Vector2(-2, -8)

[node name="BuildManager" type="Node2D" parent="."]
visible = false
script = ExtResource("4_26fgq")

[node name="Player" parent="." instance=ExtResource("5_j0bro")]
unique_name_in_owner = true

[node name="Hud" parent="Player" instance=ExtResource("6_ai4l1")]

[node name="HealthBar" parent="Player/Hud" instance=ExtResource("7_k23ho")]

[node name="HungerBar" parent="Player/Hud" instance=ExtResource("8_17m3w")]

[node name="TradeInterface" parent="Player/Hud" instance=ExtResource("9_ynbql")]
visible = false

[node name="BuildingMenu" parent="Player/Hud" instance=ExtResource("10_d4h0i")]
visible = false

[node name="PauseMenu" parent="Player" instance=ExtResource("11_ot3us")]
process_mode = 3
scale = Vector2(1, 1)
transform = Transform2D(1, 0, 0, 1, 0, 0)

[node name="Blacksmith" parent="." instance=ExtResource("12_b30sk")]
position = Vector2(180, -224)

[node name="Lumberjack" parent="." instance=ExtResource("13_yn8u8")]
position = Vector2(-228, -62)

[node name="Medic" parent="." instance=ExtResource("14_ykiai")]
position = Vector2(76, -120)

[connection signal="death" from="Player/Hud/HealthBar" to="Player" method="_on_death"]
[connection signal="death" from="Player/Hud/HungerBar" to="Player" method="_on_death"]
